--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods,   7 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)">verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)">verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)">verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)">verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)">verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyUserManagementPage" class="method navigator-link" hash-for-method="addUser(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1)">addUser(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -152,47 +132,15 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.maven.testng.VerifyWorkShifts</span>
+              <span class="class-name">com.maven.testng.VerifyUserManagementPage</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)">
-                  </a> <!-- verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson) -->
-                  <span class="method-name">verifyAddWorkShifts</span>
-                  <span class="parameters">(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)">
-                  </a> <!-- verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase) -->
-                  <span class="method-name">verifyAddWorkShifts</span>
-                  <span class="parameters">(Test_Shift 03, 12:15, 18:45, Dominic Chase)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)">
-                  </a> <!-- verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris) -->
-                  <span class="method-name">verifyAddWorkShifts</span>
-                  <span class="parameters">(Test_Shift 05, 07:45, 19:45, David Morris)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)">
-                  </a> <!-- verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot) -->
-                  <span class="method-name">verifyAddWorkShifts</span>
-                  <span class="parameters">(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)">
-                  </a> <!-- verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute) -->
-                  <span class="method-name">verifyAddWorkShifts</span>
-                  <span class="parameters">(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</span>
+                  <a name="addUser(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1)">
+                  </a> <!-- addUser(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1) -->
+                  <span class="method-name">addUser</span>
+                  <span class="parameters">(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -232,7 +180,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.maven.testng.VerifyLoginTest&quot;/&gt;
-      &lt;class name=&quot;com.maven.testng.VerifyWorkShifts&quot;/&gt;
+      &lt;class name=&quot;com.maven.testng.VerifyUserManagementPage&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -272,40 +220,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
-data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 4960);
+data.setCell(0, 1, 'addUser')
+data.setCell(0, 2, 'com.maven.testng.VerifyUserManagementPage')
+data.setCell(0, 3, 7897);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyAddWorkShifts')
-data.setCell(1, 2, 'com.maven.testng.VerifyWorkShifts')
-data.setCell(1, 3, 3656);
+data.setCell(1, 1, 'verifyLoginWithCorrectCredentials')
+data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(1, 3, 4892);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'verifyLoginErrorMessage')
 data.setCell(2, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(2, 3, 1697);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyAddWorkShifts')
-data.setCell(3, 2, 'com.maven.testng.VerifyWorkShifts')
-data.setCell(3, 3, 1598);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyAddWorkShifts')
-data.setCell(4, 2, 'com.maven.testng.VerifyWorkShifts')
-data.setCell(4, 3, 1553);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyAddWorkShifts')
-data.setCell(5, 2, 'com.maven.testng.VerifyWorkShifts')
-data.setCell(5, 3, 1537);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'verifyAddWorkShifts')
-data.setCell(6, 2, 'com.maven.testng.VerifyWorkShifts')
-data.setCell(6, 3, 1468);
+data.setCell(2, 3, 1636);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -338,45 +270,29 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4291 ms</span>
+                <span class="method-start">4196 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">5991 ms</span>
+                <span class="method-start">5834 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.maven.testng.VerifyWorkShifts</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.maven.testng.VerifyUserManagementPage</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">navigateToWorkShifts</span>
-                <span class="method-start">10953 ms</span>
+                <span class="method-name">navigate</span>
+                <span class="method-start">10727 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</span>
-                <span class="method-start">14040 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</span>
-                <span class="method-start">15639 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)</span>
-                <span class="method-start">17177 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</span>
-                <span class="method-start">18646 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)</span>
-                <span class="method-start">20200 ms</span>
+                <span class="method-name">addUser(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1)</span>
+                <span class="method-start">12960 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">23857 ms</span>
+                <span class="method-start">20858 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
