--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,17 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyUserManagementPage" class="method navigator-link" hash-for-method="addUser(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1)">addUser(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyUserManagementPage" class="method navigator-link" hash-for-method="addUser(Admin, Alice, FUN Test name 01X, Enabled, TestPassword0X1)">addUser(Admin, Alice, FUN Test name 01X, Enabled, TestPassword0X1)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyUserManagementPage" class="method navigator-link" hash-for-method="addUser(ESS, Charlie, FUN Test name 04, Disabled, TestPassword0X4)">addUser(ESS, Charlie, FUN Test name 04, Disabled, TestPassword0X4)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyUserManagementPage" class="method navigator-link" hash-for-method="addUser(Admin, Cecil, FUN Test name 03, Enabled, TestPassword0X3)">addUser(Admin, Cecil, FUN Test name 03, Enabled, TestPassword0X3)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -137,10 +147,26 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addUser(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1)">
-                  </a> <!-- addUser(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1) -->
+                  <a name="addUser(Admin, Alice, FUN Test name 01X, Enabled, TestPassword0X1)">
+                  </a> <!-- addUser(Admin, Alice, FUN Test name 01X, Enabled, TestPassword0X1) -->
                   <span class="method-name">addUser</span>
-                  <span class="parameters">(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1)</span>
+                  <span class="parameters">(Admin, Alice, FUN Test name 01X, Enabled, TestPassword0X1)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addUser(ESS, Charlie, FUN Test name 04, Disabled, TestPassword0X4)">
+                  </a> <!-- addUser(ESS, Charlie, FUN Test name 04, Disabled, TestPassword0X4) -->
+                  <span class="method-name">addUser</span>
+                  <span class="parameters">(ESS, Charlie, FUN Test name 04, Disabled, TestPassword0X4)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addUser(Admin, Cecil, FUN Test name 03, Enabled, TestPassword0X3)">
+                  </a> <!-- addUser(Admin, Cecil, FUN Test name 03, Enabled, TestPassword0X3) -->
+                  <span class="method-name">addUser</span>
+                  <span class="parameters">(Admin, Cecil, FUN Test name 03, Enabled, TestPassword0X3)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -220,24 +246,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addUser')
 data.setCell(0, 2, 'com.maven.testng.VerifyUserManagementPage')
-data.setCell(0, 3, 7897);
+data.setCell(0, 3, 8123);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyLoginWithCorrectCredentials')
-data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(1, 3, 4892);
+data.setCell(1, 1, 'addUser')
+data.setCell(1, 2, 'com.maven.testng.VerifyUserManagementPage')
+data.setCell(1, 3, 8013);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyLoginErrorMessage')
-data.setCell(2, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(2, 3, 1636);
+data.setCell(2, 1, 'addUser')
+data.setCell(2, 2, 'com.maven.testng.VerifyUserManagementPage')
+data.setCell(2, 3, 7408);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verifyLoginWithCorrectCredentials')
+data.setCell(3, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(3, 3, 5599);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'verifyLoginErrorMessage')
+data.setCell(4, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(4, 3, 1406);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 30 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -270,29 +304,37 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4196 ms</span>
+                <span class="method-start">5307 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">5834 ms</span>
+                <span class="method-start">6715 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyUserManagementPage</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">navigate</span>
-                <span class="method-start">10727 ms</span>
+                <span class="method-start">12316 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">addUser(Admin, Alice, FUN Test name 001, Enabled, TestPassword0X1)</span>
-                <span class="method-start">12960 ms</span>
+                <span class="method-name">addUser(Admin, Alice, FUN Test name 01X, Enabled, TestPassword0X1)</span>
+                <span class="method-start">14945 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addUser(Admin, Cecil, FUN Test name 03, Enabled, TestPassword0X3)</span>
+                <span class="method-start">23069 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addUser(ESS, Charlie, FUN Test name 04, Disabled, TestPassword0X4)</span>
+                <span class="method-start">31083 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">20858 ms</span>
+                <span class="method-start">38492 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
