--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="658a60">  <td>21/08/22 16:12:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@5fe1ce85]">addUser</td> 
+<tr bgcolor="658a60">  <td>21/08/22 16:14:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@5fe1ce85]">addUser</td> 
   <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/22 16:12:24</td>   <td>7898</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="658a60">  <td>21/08/22 16:14:38</td>   <td>8124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@5fe1ce85]">addUser</td> 
+  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/22 16:14:46</td>   <td>16138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyUserManagementPage.addUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyUserManagementPage@5fe1ce85]">addUser</td> 
+  <td>main@1896074070</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/22 16:14:54</td>   <td>23547</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/22 16:12:03</td>   <td>-12954</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&gt;&gt;getURL</td> 
+<tr bgcolor="b46fba">  <td>21/08/22 16:14:15</td>   <td>-14941</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&gt;&gt;getURL</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/22 16:12:14</td>   <td>-2233</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyUserManagementPage.navigate()[pri:0, instance:com.maven.testng.VerifyUserManagementPage@5fe1ce85]">&gt;&gt;navigate</td> 
+<tr bgcolor="658a60">  <td>21/08/22 16:14:27</td>   <td>-2629</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyUserManagementPage.navigate()[pri:0, instance:com.maven.testng.VerifyUserManagementPage@5fe1ce85]">&gt;&gt;navigate</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/22 16:12:07</td>   <td>-8764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginErrorMessage</td> 
+<tr bgcolor="b46fba">  <td>21/08/22 16:14:20</td>   <td>-9638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginErrorMessage</td> 
   <td>main@1896074070</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/22 16:12:09</td>   <td>-7126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginWithCorrectCredentials</td> 
+<tr bgcolor="b46fba">  <td>21/08/22 16:14:22</td>   <td>-8230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginWithCorrectCredentials</td> 
   <td>main@1896074070</td>   <td></td> </tr>
 </table>
